tmux.conf: set vi mode
Signed-off-by: parr0triver <freeordie.k@gmail.com>

--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -26,6 +26,8 @@ bind j selectp -D # 选择下窗格
 bind h selectp -L # 选择左窗格
 bind l selectp -R # 选择右窗格
 
+set -g mode-keys vi
+
 #### Outlook
 
 #set -g status-right-length 100
