tmux.conf: update history limit
It seems alias 'set' for set-option doesn't work.

Signed-off-by: parr0triver <freeordie.k@gmail.com>

--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -33,11 +33,11 @@ set -g mode-keys vi
 #set -g status-right-length 100
 #set -g status-right '#T'
 
-set -g set-titles on
+set-option -g set-titles on
 
 #### COLOUR (Solarized dark)
 
 # FIXME: it doesn't work here
-set -g history-limit 10000000
+set-option -g history-limit 10000000
 
 
